fix: remove white space between rows

--- a/css/work.css
+++ b/css/work.css
@@ -7,8 +7,6 @@
     position: relative;
     width: 25%;
     min-width: 300px;
-    height: 25%;
-    min-height: 300px;
 }
 
 .work__image {
